k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: devopsmicroservices-auth-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m" 
          #livenessProbe:         # ← restart if unhealthy
            #httpGet:
            #  path: /health
             # port: 5000
            #initialDelaySeconds: 10
            #periodSeconds: 5 
          #readinessProbe:         # ← only send traffic when rea
          # httpGet:
            #  path: /health
            #  port: 5000
            #initialDelaySeconds: 10
            #periodSeconds: 5     
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - port: 5000
      targetPort: 5000
